--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="pink-bg">
 
     <div class="center">
-        <img src="pic/love-svgrepo-com.svg" class="heart" onclick="apriBusta()">
+        <img src="love-svgrepo-com.svg" class="heart" onclick="apriBusta()">
     </div>
 
 <script>
@@ -19,3 +19,4 @@ function apriBusta() {
 
 </body>
 </html>
+
