--- a/successo.html
+++ b/successo.html
@@ -9,7 +9,7 @@
 <div class="hearts-container"></div>
 
     <div class="success-container">
-        <img src="pic/win.png" class="left-image">
+        <img src="win.png" class="left-image">
         <div class="right-text">
             <h2 >Buon San Valentino</h2>
 			<br>
@@ -20,3 +20,4 @@
 <script src="script.js"></script> 
 </body>
 </html>
+
