--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Per Te</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,4 +20,5 @@ function apriBusta() {
 
 </body>
 </html>
+
 
