--- a/domanda.html
+++ b/domanda.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Domanda</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,3 +20,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
