--- a/successo.html
+++ b/successo.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SI!</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,4 +21,5 @@
 <script src="script.js"></script> 
 </body>
 </html>
+
 
